--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ lib-cov
 coverage
 *.lcov
 
+# parcel-cache
+.parcel-cache/
+
 # nyc test coverage
 .nyc_output
 
@@ -102,3 +105,4 @@ dist
 
 # TernJS port file
 .tern-port
+*.mdb
